# pythonLab

./: .gitignore  README.adoc
tryPoetry/: README.adoc  pyproject.toml
tryPoetry/hellopoetry/.cache/v/cache/: lastfailed
tryPoetry/hellopoetry/console/: __init__.py  application.py
tryPoetry/newpkg/subpkg/: module1.py
tryPoetry/tests/: test_hellopoetry.py
