[tool.poetry]
name = "hellopoetry"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.17"
pillow = "^6.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[tool.poetry.scripts]
hello = "hellopoetry.console:main"
hello_newpkg = "newpkg.subpkg.module1:test"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

